Bug fix for the loader not covering the part of the screen the user is viewing

--- a/client/src/stylesheets/ForecastHeader.scss
+++ b/client/src/stylesheets/ForecastHeader.scss
@@ -47,6 +47,8 @@
     width: 50%;
     line-height: 40px;
     font-size: 25px;
+    background-color: white;
+    margin: 0px;
   }
 }
 
