--- a/client/src/stylesheets/Loader.scss
+++ b/client/src/stylesheets/Loader.scss
@@ -1,12 +1,18 @@
 .loader-container {
-  position: absolute;
-  z-index: 9999;
+  position: fixed;
+  z-index: 10000;
   top: 0;
-  left: 0;
+  right: 0;
+  bottom: 0;
+  left: 326px;
   background-color: #c2c2c2;
   opacity: .8;
-  width: 100%;
-  height: 100%;
+
+  &.side-nav-loader {
+    right: calc(100vw - 326px);
+    left: 0;
+  }
+
 
   .loader {
     position: relative;
